--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,21 +1,29 @@
 /* Estilos para el slider */
 /* Estilos para el slider */
 .slider-container {
-    position: relative;
-    width: 100%;
-    height: 450px; /* Altura del slider */
-    overflow: hidden;
+  position: relative;
+  width: 100%;
+  height: auto; /* Cambiado a auto */
+  max-height: 450px; /* Altura máxima del slider para pantallas grandes */
+  overflow: hidden;
+}
+
+.slider-track {
+  display: flex;
+  transition: transform 0.8s ease-in-out;
+}
+
+.slider-image {
+  flex: 0 0 100%;
+  height: auto;
+  object-fit: cover;
+}
+
+/* Ajustes para dispositivos móviles */
+@media (max-width: 768px) {
+  .slider-container {
+      max-height: 300px; /* Altura máxima del slider en dispositivos móviles */
   }
-  
-  .slider-track {
-    display: flex;
-    transition: transform 0.8s ease-in-out;
-  }
-  
-  .slider-image {
-    flex: 0 0 100%;
-    height: 100%;
-    object-fit: cover;
-  }
-  
-  
+}
+
+
